# 00001bot

./: .gitignore  dataset.json  topics.json
marco-voice-engine/: .dockerignore  .env.example  Dockerfile  README.md  api.py  fly.toml  pyproject.toml  test_api_custom_prompt.py  test_custom_prompt.py  test_generator_debug.py
marco-voice-engine/data/: goldset.example.jsonl
marco-voice-engine/scripts/: ab_calibration.py  annotate_style.py  debug_propose.py  topics_probe.py
marco-voice-engine/src/marco_voice_engine/: __init__.py  __main__.py  ai_cop.py  config.py  embeddings.py  generator.py  goldset_loader.py  judge.py  pipeline.py  reply_filter.py  style_retriever.py  telegram_bot.py  vector_store.py
